[Polyam] Fix autocomplete suggestions being cut off in compose form
Port 683373285264c92cb0ed08c73e460ec471479ec3 to polyam-glitch

--- a/app/javascript/flavours/glitch/styles/components/compose_form.scss
+++ b/app/javascript/flavours/glitch/styles/components/compose_form.scss
@@ -693,10 +693,10 @@
 .compose-form__highlightable {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   flex: 0 1 auto;
   border-radius: 4px;
   transition: box-shadow 300ms linear;
+  min-height: 0;
 
   &.active {
     transition: none;
